recipes page styled, fixed some spacing issues on splash page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@
 }
 
 @mixin header {
-  color: #BE0000;
+  color: #A50000;
   font-style: italic;
   margin-left: 10%;
 }
@@ -122,6 +122,10 @@
   text-align: justify;
 }
 
+.how-to-text li {
+  padding-bottom: 10px;
+}
+
 //Benefits//
 .benefits-of {
   @include header;
@@ -132,10 +136,75 @@
 }
 
 //Recipe HTML Styling//
+.recipe-header {
+  @include header;
+  text-align: center;
+  font-size: 2.75em;
+  margin-left: 0;
+}
+
+.search-filter {
+  text-align: center;
+  margin: 0 0 20px;
+}
+
 .savedRecipeCard {
   @include border-type;
   width: 27%;
   @include inline-block;
+  margin: 1% 2%;
+  height: 300px;
+}
+
+.recipe-name {
+  text-align: center;
+  font-size: 1.5em;
+  color: #5E36A3;
+  padding: 10px;
+}
+
+.ingredient {
+  @include inline-block;
+  margin-left: 5%;
+  color: #A52A2F;
+}
+
+.ounces {
+  @include inline-block;
+  float: right;
+  margin-right: 5%;
+  color: #A52A2F;
+}
+
+.ingredient-ounces {
+  height: 125px;
+  width: 100%;
+  overflow: auto;
+}
+
+.recipe-ingredient-name{
+  @include inline-block;
+  margin-left: 7%;
+  color: #5E36A3;
+}
+
+.recipe-ingredient-amount{
+  @include inline-block;
+  float: right;
+  margin-right: 9%;
+  color: #5E36A3;
+}
+
+.recipe-description {
+  margin: 15px 0 20px 15px;
+  overflow: auto;
+  height: 45px;
+  width: 90%;
+  color: #A52A2F;
+}
+
+.add-to-favorites{
+  text-align: center;
 }
 
 //Create Juice HTML Styling//
